crates/swc_ecma_parser/tests/test262-error-references/fail/7222f595c694ef81.module.js.stderr
error: Unexpected token `,`. Expected identifier or string
 --> $DIR/tests/test262-parser/fail/7222f595c694ef81.module.js:1:11
  |
1 | export {a,,}
  |           ^

